--- a/Latest/Interface/Base.lproj/Main.storyboard
+++ b/Latest/Interface/Base.lproj/Main.storyboard
@@ -341,18 +341,6 @@
                                                 <action selector="toggleShowIgnoredUpdates:" target="Ady-hI-5gd" id="V8P-XQ-TjM"/>
                                             </connections>
                                         </menuItem>
-                                        <menuItem title="Show Unsupported Apps" keyEquivalent="i" id="6Cd-Qc-3Xc">
-                                            <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
-                                            <connections>
-                                                <action selector="toggleShowUnsupportedUpdates:" target="Ady-hI-5gd" id="URA-qk-ZAz"/>
-                                            </connections>
-                                        </menuItem>
-                                        <menuItem isSeparatorItem="YES" id="sV1-V0-voo"/>
-                                        <menuItem title="Show External Updates" keyEquivalent="E" id="ZAF-PE-baJ">
-                                            <connections>
-                                                <action selector="toggleShowExternalUpdates:" target="Ady-hI-5gd" id="g0C-DT-iGw"/>
-                                            </connections>
-                                        </menuItem>
                                         <menuItem isSeparatorItem="YES" id="2cf-83-Jly"/>
                                         <menuItem title="Check for Updates…" keyEquivalent="r" id="c4C-I9-Gd0">
                                             <connections>
@@ -1184,8 +1172,8 @@
         <scene sceneID="O9L-oX-9DW">
             <objects>
                 <windowController showSeguePresentationStyle="single" id="FYj-Dr-V87" sceneMemberID="viewController">
-                    <window key="window" title="Settings" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="SettingsWindow" animationBehavior="default" id="DfQ-ss-Qv2">
-                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+                    <window key="window" title="Settings" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="SettingsWindow" animationBehavior="default" id="DfQ-ss-Qv2">
+                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
                         <rect key="contentRect" x="976" y="544" width="480" height="270"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1440"/>
                         <view key="contentView" id="lnM-H5-eLx">
@@ -1197,17 +1185,126 @@
                         </connections>
                     </window>
                     <connections>
-                        <segue destination="MRG-cS-c2g" kind="relationship" relationship="window.shadowedContentViewController" id="wIk-zZ-qvN"/>
+                        <segue destination="I7C-SZ-hK0" kind="relationship" relationship="window.shadowedContentViewController" id="qEM-Em-mYd"/>
                     </connections>
                 </windowController>
                 <customObject id="owo-Xd-Hwc" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1109" y="196"/>
         </scene>
-        <!--App Directory View Controller-->
+        <!--Settings Tab View Controller-->
+        <scene sceneID="2vq-1z-cTh">
+            <objects>
+                <tabViewController selectedTabViewItemIndex="0" tabStyle="toolbar" id="I7C-SZ-hK0" customClass="SettingsTabViewController" customModule="Latest" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabViewItems>
+                        <tabViewItem identifier="" image="gearshape" catalog="system" id="Xic-Pn-Ofe"/>
+                        <tabViewItem image="externaldrive" catalog="system" id="XeF-CA-pk8"/>
+                    </tabViewItems>
+                    <tabView key="tabView" type="noTabsNoBorder" id="BWu-0g-agI">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <font key="font" metaFont="system"/>
+                        <connections>
+                            <outlet property="delegate" destination="I7C-SZ-hK0" id="ZQ1-9w-qxf"/>
+                        </connections>
+                    </tabView>
+                    <connections>
+                        <outlet property="tabView" destination="BWu-0g-agI" id="Qnu-7f-cvr"/>
+                        <segue destination="JNL-bS-gzr" kind="relationship" relationship="tabItems" id="TxB-5a-AYU"/>
+                        <segue destination="MRG-cS-c2g" kind="relationship" relationship="tabItems" id="QSz-G9-BuW"/>
+                    </connections>
+                </tabViewController>
+                <customObject id="3Lp-OM-5RK" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1672" y="187"/>
+        </scene>
+        <!--General-->
+        <scene sceneID="d1P-e9-H2I">
+            <objects>
+                <viewController title="General" showSeguePresentationStyle="single" id="JNL-bS-gzr" customClass="GeneralSettingsViewController" customModule="Latest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" misplaced="YES" id="4Hf-JC-45B">
+                        <rect key="frame" x="0.0" y="0.0" width="305" height="98"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <gridView horizontalHuggingPriority="1000" verticalHuggingPriority="1000" xPlacement="leading" yPlacement="top" rowAlignment="firstBaseline" translatesAutoresizingMaskIntoConstraints="NO" id="crg-Gw-gZ5">
+                                <rect key="frame" x="20" y="40" width="233" height="38"/>
+                                <rows>
+                                    <gridRow id="AG2-lk-oHh"/>
+                                    <gridRow id="mkf-7m-YLP"/>
+                                </rows>
+                                <columns>
+                                    <gridColumn xPlacement="trailing" id="dMS-4w-aVX"/>
+                                    <gridColumn xPlacement="trailing" id="XhW-KT-4zm"/>
+                                </columns>
+                                <gridCells>
+                                    <gridCell row="AG2-lk-oHh" column="dMS-4w-aVX" id="WjR-3P-sJ9">
+                                        <textField key="contentView" focusRingType="none" horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ySC-9b-46i">
+                                            <rect key="frame" x="-2" y="22" width="52" height="16"/>
+                                            <textFieldCell key="cell" lineBreakMode="clipping" title="Include:" id="kOo-16-ogk">
+                                                <font key="font" usesAppearanceFont="YES"/>
+                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                        </textField>
+                                    </gridCell>
+                                    <gridCell row="AG2-lk-oHh" column="XhW-KT-4zm" id="R3U-J6-Ami">
+                                        <button key="contentView" horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cHy-Zs-llx">
+                                            <rect key="frame" x="52" y="21" width="181" height="18"/>
+                                            <buttonCell key="cell" type="check" title="Apps with limited support" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="Ntm-I4-heJ">
+                                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                                <font key="font" metaFont="system"/>
+                                            </buttonCell>
+                                            <connections>
+                                                <binding destination="JNL-bS-gzr" name="value" keyPath="self.includeAppsWithLimitedSupport" id="ZeZ-4C-7HF"/>
+                                            </connections>
+                                        </button>
+                                    </gridCell>
+                                    <gridCell row="mkf-7m-YLP" column="dMS-4w-aVX" id="jlX-DI-hqS"/>
+                                    <gridCell row="mkf-7m-YLP" column="XhW-KT-4zm" id="VBO-5W-952">
+                                        <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="iZa-ii-6NG">
+                                            <rect key="frame" x="52" y="-1" width="181" height="18"/>
+                                            <buttonCell key="cell" type="check" title="Unsupported apps" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="HfB-8a-u7P">
+                                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                                <font key="font" metaFont="system"/>
+                                            </buttonCell>
+                                            <connections>
+                                                <binding destination="JNL-bS-gzr" name="value" keyPath="self.includeUnsupportedApps" id="wTc-jg-0oJ"/>
+                                            </connections>
+                                        </button>
+                                    </gridCell>
+                                </gridCells>
+                            </gridView>
+                            <button horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="yVe-9T-cjf">
+                                <rect key="frame" x="262" y="16" width="25" height="25"/>
+                                <buttonCell key="cell" type="help" bezelStyle="helpButton" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="izQ-GX-bAX">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="yVe-9T-cjf" secondAttribute="trailing" constant="20" symbolic="YES" id="5sf-ZD-Ag8"/>
+                            <constraint firstAttribute="bottom" secondItem="yVe-9T-cjf" secondAttribute="bottom" constant="20" symbolic="YES" id="CBu-Jt-l1A"/>
+                            <constraint firstItem="iZa-ii-6NG" firstAttribute="bottom" secondItem="yVe-9T-cjf" secondAttribute="top" id="c7K-kt-84J"/>
+                            <constraint firstItem="crg-Gw-gZ5" firstAttribute="top" secondItem="4Hf-JC-45B" secondAttribute="top" constant="20" symbolic="YES" id="kh5-R2-oHV"/>
+                            <constraint firstItem="crg-Gw-gZ5" firstAttribute="leading" secondItem="4Hf-JC-45B" secondAttribute="leading" constant="20" symbolic="YES" id="tcN-Ue-Dgt"/>
+                            <constraint firstItem="yVe-9T-cjf" firstAttribute="leading" secondItem="crg-Gw-gZ5" secondAttribute="trailing" constant="12" symbolic="YES" id="x36-u3-NC7"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="animatingBottomConstraint" destination="CBu-Jt-l1A" id="bgu-Bw-Xt5"/>
+                        <outlet property="animatingTrailingConstraint" destination="5sf-ZD-Ag8" id="SxA-US-geW"/>
+                    </connections>
+                </viewController>
+                <customObject id="P9G-Ah-AWe" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <userDefaultsController representsSharedInstance="YES" id="K4d-o1-apG"/>
+            </objects>
+            <point key="canvasLocation" x="2344.5" y="100"/>
+        </scene>
+        <!--Locations-->
         <scene sceneID="Zun-m9-nSS">
             <objects>
-                <viewController id="MRG-cS-c2g" customClass="AppDirectoryViewController" customModule="Latest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Locations" showSeguePresentationStyle="single" id="MRG-cS-c2g" customClass="AppDirectoryViewController" customModule="Latest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="XHZ-eg-flw">
                         <rect key="frame" x="0.0" y="0.0" width="440" height="292"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1311,8 +1408,8 @@
                                     </subviews>
                                 </clipView>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="400" id="Tbt-C9-u3W"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="qPK-Oc-ZGZ"/>
+                                    <constraint firstAttribute="width" constant="400" id="Tbt-C9-u3W"/>
+                                    <constraint firstAttribute="height" constant="200" id="qPK-Oc-ZGZ"/>
                                 </constraints>
                                 <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="NGC-OT-Wza">
                                     <rect key="frame" x="1" y="183" width="398" height="16"/>
@@ -1359,12 +1456,14 @@
                     </view>
                     <connections>
                         <outlet property="actionControl" destination="iwo-UW-yZn" id="eJW-jd-YV0"/>
+                        <outlet property="animatingBottomConstraint" destination="b52-bu-jql" id="5QF-Yq-6Uv"/>
+                        <outlet property="animatingTrailingConstraint" destination="yf3-mM-jpE" id="UhT-ob-iDx"/>
                         <outlet property="tableView" destination="jaK-Py-vfe" id="928-iX-Y0p"/>
                     </connections>
                 </viewController>
                 <customObject id="Vg8-PL-7Ko" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1959" y="194"/>
+            <point key="canvasLocation" x="2340" y="389"/>
         </scene>
         <!--Release Notes Error View Controller-->
         <scene sceneID="vfl-LZ-teC">
@@ -1430,5 +1529,7 @@
         <image name="NSTouchBarRefreshTemplate" width="18" height="21"/>
         <image name="NSTouchBarSearchTemplate" width="20" height="20"/>
         <image name="appstore" width="12" height="12"/>
+        <image name="externaldrive" catalog="system" width="18" height="13"/>
+        <image name="gearshape" catalog="system" width="16" height="16"/>
     </resources>
 </document>
